changes bofore meeting

--- a/src/app/dashboard/home.component.css
+++ b/src/app/dashboard/home.component.css
@@ -429,3 +429,12 @@ a {
         color: white;
         padding: 10px;
     }
+    .coinimg{
+        padding:0px;
+    }
+    .col-md-3.col-sm-3.coinhrs {
+
+        text-align: center;
+    
+    }
+    
