--- a/src/app/dashboard/home.component.html
+++ b/src/app/dashboard/home.component.html
@@ -79,7 +79,7 @@
                 
                 <!--list of bitcoine-->
                 <div class="coinlists">
-                  <div class="col-md-12 col-sm-12 col-xs-12">
+                  <div class="col-md-12 col-sm-12 col-xs-12 coinimg">
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-12 coinlogo">
                       <div class="ticket icon">
@@ -271,12 +271,12 @@
               </a>
             </h4>
             <div class="sub-items">
-                <a class="btn-flat center-align active" href="#" >
+                <!-- <a class="btn-flat center-align active" href="#" >
                 <i class="fa fa-list" style="font-size: 14px;"></i>
                 </a> 
                 <a class="btn-flat center-align" href="#" >
                 <i class="fa fa-list-ul" style="font-size: 14px;"></i>
-                </a>
+                </a> -->
                 <a class="btn-flat center-align" href="#">
                 <i class="fa fa-pie-chart" style="font-size: 14px;"></i>
                 </a>
@@ -288,8 +288,8 @@
              <div class="row">
                <div class="col-md-3"></div>
                <div class="col-md-3 balexchange"><span class="open">Exchange</span></div>
-               <div class="col-md-3 balmargin"><span class="open">Margin</span></div>
-               <div class="col-md-3 balfunding"><span class="open">Funding</span></div>
+               <!-- <div class="col-md-3 balmargin"><span class="open">Margin</span></div>
+               <div class="col-md-3 balfunding"><span class="open">Funding</span></div> -->
                </div>
                
                 <div class="balrow">
@@ -395,7 +395,7 @@
         <!--4th block end-->
       </div>
       </div>
-      
+      <!--right sidebar-->
       <div class="col-md-8 col-sm-12">
           <!-- <h1>Hi {{currentUser.firstName}}!</h1>
           <p>You're logged in with Angular 6!!</p>
