--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
         <div class="col-md-3 firstfooter">
           <img src="assets/logowhite.png">
          <p>
-            BitMEX is a P2P crypto-products trading platform.
-            BitMEX and the mobile apps issued under BMEX are wholly owned and operated by HDR Global Trading Limited, 
+            Crypto Exchange is a P2P crypto-products trading platform.
+            Crypto Exchange and the mobile apps issued under BMEX are wholly owned and operated by HDR Global Trading Limited, 
             a Republic of Seychelles incorporated entity or its relevant authorized affiliates.
          </p>
         </div>
