--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,11 +52,16 @@
 <div class="modal" id="myModal">
     <div class="modal-dialog">
       <div class="modal-content">
-      
+          <span class="alertbox"><alert></alert></span>
         <!-- Modal Header -->
         <div class="modal-header">
+           
           <!-- <h4 class="modal-title">Login</h4>  -->
-          <alert></alert>
+          <span class="login100-form-logo">
+            <!-- <i class="zmdi zmdi-landscape"></i> -->
+            <img src="assets/user.png">
+          </span>
+         
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           
         </div>
@@ -67,9 +72,9 @@
         </div>
         
         <!-- Modal footer -->
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
+        </div> -->
         
       </div>
     </div>
@@ -78,22 +83,30 @@
   <div class="modal" id="myModal1">
       <div class="modal-dialog">
         <div class="modal-content">
-        
+            <span class="alertbox"><alert></alert></span>
           <!-- Modal Header -->
           <div class="modal-header">
+             
+              <span class="login100-form-logo">
+                  <!-- <i class="zmdi1 zmdi-landscape1"></i> -->
+                  <img src="assets/create1.png">
+                  
+                </span>
             <!-- <h4 class="modal-title">Register</h4> -->
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
-          <alert></alert>
+          
+          
           <!-- Modal body -->
           <div class="modal-body">
+             
               <reg-app></reg-app>
           </div>
           
           <!-- Modal footer -->
-          <div class="modal-footer">
+          <!-- <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          </div>
+          </div> -->
           
         </div>
       </div>
