--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -28,11 +28,9 @@
   <div class="text-center">
     <h3 class="baltxt">Currrent Balance</h3>
 
-    <div class="newpie">
-      
-    </div>
-
+    <div class="row">
     <div class="droplistmain">
+      <div class="col-md-3">
     <div class="droplist">
         <label>
             <select>
@@ -52,7 +50,8 @@
             </select>
         </label>
       </div>
-
+      </div>
+      <div class="col-md-3">
       <div class="secdrop">
           <label>
               <select>
@@ -70,8 +69,9 @@
               </select>
           </label>
         </div>
-
+        </div>
        
+        <div class="col-md-3">
         <div class="thirddrop">
             <label>
                 <select>
@@ -89,11 +89,19 @@
             </label>
           </div>
           </div>
+          <div class="col-md-3 search">
+          <input type="text" placeholder="Search.." class="new">
+          
+            <i class="fa fa-search" style="cursor: auto;"></i>
+         
+          </div>
+          </div>
+          </div>
       <!-- search table-->
      
         <div class="buylist">
         <div class="row">
-          <div class="col-md-7">
+          <div class="col-md-7 cryptotable">
               <table class="table striped">
                   <thead>
                     <tr>
@@ -107,20 +115,93 @@
           
                   <tbody>
                     <tr>
-                      <td>Alvin</td>
-                      <td>Eclair</td>
-                      <td>$0.87</td>
+                      <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin.png">Bitcoin</td>
+                      <td>0.0200</td>
+                      <td>$4000</td>
+                      <td>$4,21,001.00</td>
+                      <td>9.74%</td>
+                      
                     </tr>
                     <tr>
-                      <td>Alan</td>
-                      <td>Jellybean</td>
-                      <td>$3.76</td>
-                    </tr>
-                    <tr>
-                      <td>Jonathan</td>
-                      <td>Lollipop</td>
-                      <td>$7.00</td>
-                    </tr>
+                        <td><img class="cryptoimg" src="assets/bitcoinimages/achain.png">Achain</td>
+                        <td>0.0200</td>
+                        <td>$4000</td>
+                        <td>$4,21,001.00</td>
+                        <td>9.74%</td>
+                        
+                      </tr>
+                      <tr>
+                          <td><img class="cryptoimg" src="assets/bitcoinimages/aeternity.png">Aternity</td>
+                          <td>0.0200</td>
+                          <td>$4000</td>
+                          <td>$4,21,001.00</td>
+                          <td>9.74%</td>
+                          
+                        </tr>
+                        <tr>
+                            <td><img class="cryptoimg" src="assets/bitcoinimages/aion.png">Aion</td>
+                            <td>0.0200</td>
+                            <td>$4000</td>
+                            <td>$4,21,001.00</td>
+                            <td>9.74%</td>
+                            
+                          </tr>
+                          <tr>
+                              <td><img class="cryptoimg" src="assets/bitcoinimages/augur.png">Augur</td>
+                              <td>0.0200</td>
+                              <td>$4000</td>
+                              <td>$4,21,001.00</td>
+                              <td>9.74%</td>
+                              
+                            </tr>
+                            <tr>
+                                <td><img class="cryptoimg" src="assets/bitcoinimages/bitcoin_cash.png">Bitcoin Cash</td>
+                                <td>0.0200</td>
+                                <td>$4000</td>
+                                <td>$4,21,001.00</td>
+                                <td>9.74%</td>
+                                
+                              </tr>
+                              <tr>
+                                  <td><img class="cryptoimg" src="assets/bitcoinimages/cyber_miles.png">Cyber Miles</td>
+                                  <td>0.0200</td>
+                                  <td>$4000</td>
+                                  <td>$4,21,001.00</td>
+                                  <td>9.74%</td>
+                                  
+                                </tr>
+                                <tr>
+                                    <td><img class="cryptoimg" src="assets/bitcoinimages/eos.png">Eos</td>
+                                    <td>0.0200</td>
+                                    <td>$4000</td>
+                                    <td>$4,21,001.00</td>
+                                    <td>9.74%</td>
+                                    
+                                  </tr>
+                                  <tr>
+                                      <td><img class="cryptoimg" src="assets/bitcoinimages/ether.png">Ether</td>
+                                      <td>0.0200</td>
+                                      <td>$4000</td>
+                                      <td>$4,21,001.00</td>
+                                      <td>9.74%</td>
+                                      
+                                    </tr>
+                                    <tr>
+                                        <td><img class="cryptoimg" src="assets/bitcoinimages/litecoin.png">Litecoin</td>
+                                        <td>0.0200</td>
+                                        <td>$4000</td>
+                                        <td>$4,21,001.00</td>
+                                        <td>9.74%</td>
+                                        
+                                      </tr>
+                                      <tr>
+                                          <td><img class="cryptoimg" src="assets/bitcoinimages/nano.png">Nano</td>
+                                          <td>0.0200</td>
+                                          <td>$4000</td>
+                                          <td>$4,21,001.00</td>
+                                          <td>9.74%</td>
+                                          
+                                        </tr>
                   </tbody>
                 </table>
           </div>
